# Haskell_Data.Chemistry

./: HChem-libs.cabal  Makefile  README.md  stack.yaml
src/modules/Data/Chemistry/: BasisOptimisation.hs  BasisOptimization.hs  BasisSet.hs  Molden.hs  Parser.hs  QC.hs  Spectrum.hs  Test.hs  Types.hs  Wavefunction.hs  Writer.hs  XYZ.hs
src/modules/Data/Chemistry/QC/: Potential.hs  Psi4.hs
