Name:		HChem-libs
Version:	0.2
Cabal-Version:  >= 1.2
License:	GPL-3
License-File:	LICENSE
Author:		Phillip Seeber
Homepage:	https://github.com/sheepforce/Haskell_Data.Chemistry
Category:	Chemistry
Synopsis:	Handling chemical data formats
Build-Type:     Simple

Library
  Build-Depends:
    base,
    attoparsec,
    text,
    hmatrix>=0.18
  Exposed-modules:
    Data.Chemistry.XYZ,
    Data.Chemistry.BasisSet
  hs-source-dirs:
    src/modules
  ghc-options:
    -Wall -O2
