Name:		HChem-libs
Version:	0.2
Cabal-Version:  >= 1.2
License:	GPL-3
License-File:	LICENSE
Author:		Phillip Seeber
Homepage:	https://github.com/sheepforce/Haskell_Data.Chemistry
Category:	Chemistry
Synopsis:	Handling chemical data formats
Build-Type:     Simple

Library
  Build-Depends:
    base,
    attoparsec,
    text,
    process,
    either-unwrap,
    hmatrix>=0.18,
    hmatrix-gsl    
  Exposed-modules:
    Data.Chemistry.XYZ,
    Data.Chemistry.BasisSet,
    Data.Chemistry.QC,
    Data.Chemistry.QC.Psi4,
    Data.Chemistry.QC.Potential
  hs-source-dirs:
    src/modules
  ghc-options:
    -Wall -O2
