name: HChem-libs
version: 0.2
cabal-version: >=1.2
build-type: Simple
license: GPL-3
license-file: LICENSE
homepage: https://github.com/sheepforce/Haskell_Data.Chemistry
synopsis: Handling chemical data formats
category: Chemistry
author: Phillip Seeber

library
    exposed-modules:
        Data.Chemistry.XYZ
        Data.Chemistry.BasisSet
        Data.Chemistry.Wavefunction
        Data.Chemistry.Molden
        Data.Chemistry.BasisOptimisation
    build-depends:
        base -any,
        attoparsec -any,
        text -any,
        hmatrix >=0.18,
        microlens-platform >= 0.3.9.0
    hs-source-dirs: src/modules
    ghc-options: -Wall -O2
